--- a/web/src/app/components/admin-dashboard/shared/chatbutton/chatbutton.component.scss
+++ b/web/src/app/components/admin-dashboard/shared/chatbutton/chatbutton.component.scss
@@ -344,3 +344,8 @@ li + li {
   display: flex;
   justify-content: flex-end;
 }
+.callIcon.disabled {
+  opacity: 0.5;
+  pointer-events: none;
+  cursor: not-allowed;
+}
