--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
@@ -410,6 +410,7 @@
               (MedicationTablereload)="getMedicationReload()"
               (reviewTableReload)="getReviewDataReload()"
               (TaskTablereload)="getTaskAlertDataReload()"
+              (openTaskTablereload)="getOpenTaskDataReload()"
               (ScheduleTablereload)="getScheduleDataReload()"
               (ResetReviewTimer)="resetReviewTimer()"
               (billingInfoReload)="billingReload()"
@@ -4717,7 +4718,7 @@
                 *ngIf="index === 0"
                 [attr.rowspan]="scheduleitem.SchedueInfos.length"
               >
-                {{ datepipe.transform(scheduleitem.ScheduleDate, "MMM d, y") }}
+                {{ datepipe.transform(convertToLocalTime(scheduleitem.ScheduleDate), "MMM d, y") }}
               </td>
               <td [ngStyle]="{ 'border-radius': '8px 0px 0px 8px' }">
                 {{ schedule_data.ScheduleTime }}
