patient detail page program date loca time conversion

--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
@@ -256,7 +256,7 @@
                   {{ data.ProgramName }}
                 </span>
                 <span class="activeStatusStyle">
-                  {{ data.StartDate | date : "mediumDate" }}
+                  {{ convertToLocalTime(data.StartDate) | date : "mediumDate" }}
                 </span>
               </option>
             </select>
