Bug fixes - Font changes and Notification bell icon style

--- a/web/src/app/components/admin-dashboard/components/add-user/add-user.component.html
+++ b/web/src/app/components/admin-dashboard/components/add-user/add-user.component.html
@@ -56,7 +56,7 @@
                         registerForm.get('email')?.invalid &&
                         registerForm.get('email')?.touched
                       "
-                      >Email is Required</small
+                      >Email is required</small
                     >
                   </div>
                   <div class="userInfoItem">
@@ -77,7 +77,7 @@
                         registerForm.get('phone')?.invalid &&
                         registerForm.get('phone')?.touched
                       "
-                      >Mobile Number is Required</small
+                      >Mobile Number is required</small
                     >
                   </div>
                   <div class="userInfoItem" style="visibility: hidden">
@@ -120,7 +120,7 @@
                         registerForm.get('fname')?.invalid &&
                         registerForm.get('fname')?.touched
                       "
-                      >First Name is Required</small
+                      >First Name is required</small
                     >
                   </div>
                   <div class="userInfoItem">
@@ -150,7 +150,7 @@
                         registerForm.get('lname')?.invalid &&
                         registerForm.get('lname')?.touched
                       "
-                      >Last Name is Required</small
+                      >Last Name is required</small
                     >
                   </div>
                   <div class="userInfoItem">
@@ -198,7 +198,7 @@
                         registerForm.get('uname')?.invalid &&
                         registerForm.get('uname')?.touched
                       "
-                      >User Name is Required</small
+                      >User Name is required</small
                     >
                   </div>
                   <div class="userInfoItem" *ngIf="http_state">
@@ -226,7 +226,7 @@
                         registerForm.get('state')?.invalid &&
                         registerForm.get('state')?.touched
                       "
-                      >State Name is Required</small
+                      >State Name is required</small
                     >
                   </div>
                   <div class="userInfoItem">
@@ -253,7 +253,7 @@
                         registerForm.get('city')?.invalid &&
                         registerForm.get('city')?.touched
                       "
-                      >City Name is Required</small
+                      >City Name is required</small
                     >
                   </div>
                   <div class="userInfoItem">
@@ -272,7 +272,7 @@
                         registerForm.get('zipcode')?.invalid &&
                         registerForm.get('zipcode')?.touched
                       "
-                      >Zip code is Required</small
+                      >Zip code is required</small
                     >
                   </div>
                   <div class="userInfoItem">
@@ -294,7 +294,7 @@
                         registerForm.get('timezone')?.invalid &&
                         registerForm.get('timezone')?.touched
                       "
-                      >Time Zone is Required</small
+                      >Time Zone is required</small
                     >
                   </div>
                 </div>
