--- a/web/src/app/components/admin-dashboard/components/admin/admin.component.html
+++ b/web/src/app/components/admin-dashboard/components/admin/admin.component.html
@@ -1046,7 +1046,7 @@
                 registerClinic.get('clinicname')?.touched
               "
             >
-              Clinic Name is Required
+              Clinic Name is required
             </p>
           </div>
         </div>
@@ -1073,7 +1073,7 @@
                 registerClinic.get('cliniccode')?.touched
               "
             >
-              Clinic Code is Required
+              Clinic Code is required
             </p>
           </div>
 
@@ -1095,7 +1095,7 @@
                 registerClinic.get('cliniccode')?.touched
               "
             >
-              Clinic Code is Required
+              Clinic Code is required
             </p>
           </div>
         </div>
@@ -1116,7 +1116,7 @@
                 registerClinic.get('mobile')?.touched
               "
             >
-              Mobile Number is Required
+              Mobile Number is required
             </p>
           </div>
           <div class="add_clinic-item_sub">
@@ -1147,7 +1147,7 @@
               registerClinic.get('addressline1')?.touched
             "
           >
-            Address is Required
+            Address is required
           </p>
         </div>
         <div class="common_content">
