--- a/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.html
+++ b/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.html
@@ -178,7 +178,7 @@
                           PatientInfoForm.get('firstname')?.touched
                         "
                       >
-                        First Name is Required
+                        First Name is required
                       </ng-container>
                     </div>
                   </div>
@@ -244,7 +244,7 @@
                           PatientInfoForm.get('gender')?.touched
                         "
                       >
-                        Gender is Required
+                        Gender is required
                       </ng-container>
                     </div>
                   </div>
@@ -487,7 +487,7 @@
                         PatientInfoForm.get('addressline1')?.touched
                       "
                     >
-                      Address is Required
+                      Address is required
                     </ng-container>
                   </div>
                 </div>
@@ -543,7 +543,7 @@
                             PatientInfoForm.get('city')?.touched
                           "
                         >
-                          City is Required
+                          City is required
                         </ng-container>
                       </div>
                     </div>
@@ -568,7 +568,7 @@
                             PatientInfoForm.get('zipcode')?.touched
                           "
                         >
-                          ZipCode is Required
+                          ZipCode is required
                         </ng-container>
                       </div>
                     </div>
@@ -1105,7 +1105,7 @@
                             programForm.get('programname')?.touched
                           "
                         >
-                          Program Name is Required
+                          Program Name is required
                         </ng-container>
                       </div>
                     </div>
@@ -1409,7 +1409,7 @@
                           programForm.get('consultdate')?.invalid &&
                           programForm.get('consultdate')?.touched
                         "
-                        >consultdate is Required</small
+                        >Consultdate is required</small
                       >
                       <div class="warn">
                         <ng-container *ngIf="futureDateError">
@@ -1612,7 +1612,7 @@
                                 programForm.get('code')?.invalid &&
                                 programForm.get('code')?.touched
                               "
-                              >code is Required</small
+                              >Code is required</small
                             >
                           </div>
                         </div>
@@ -3325,7 +3325,7 @@
                           editProgramdata.get('code')?.invalid &&
                           editProgramdata.get('code')?.touched
                         "
-                        >code is Required</small
+                        >Code is required</small
                       >
                     </div>
 
@@ -3368,7 +3368,7 @@
                           programForm.get('code')?.invalid &&
                           programForm.get('code')?.touched
                         "
-                        >code is Required</small
+                        >Code is required</small
                       >
                     </div>
                   </div>
