--- a/web/src/app/components/admin-dashboard/components/myprofile/myprofile.component.html
+++ b/web/src/app/components/admin-dashboard/components/myprofile/myprofile.component.html
@@ -96,7 +96,7 @@
                         registerprofile.get('email')?.invalid &&
                         registerprofile.get('email')?.touched
                       "
-                      >Email is Required
+                      >Email is required
                     </ng-container>
                   </div>
                 </div>
@@ -116,7 +116,7 @@
                         registerprofile.get('mobile')?.invalid &&
                         registerprofile.get('mobile')?.touched
                       "
-                      >Mobile Number is Required
+                      >Mobile Number is required
                     </ng-container>
                   </div>
                 </div>
@@ -173,7 +173,7 @@
                         registerprofile.get('firstname')?.invalid &&
                         registerprofile.get('firstname')?.touched
                       "
-                      >First Name is Required
+                      >First Name is required
                     </ng-container>
                   </div>
                 </div>
@@ -202,7 +202,7 @@
                         registerprofile.get('lastname')?.invalid &&
                         registerprofile.get('lastname')?.touched
                       "
-                      >Last Name is Required
+                      >Last Name is required
                     </ng-container>
                   </div>
                 </div>
@@ -222,7 +222,7 @@
                         registerprofile.get('uname')?.invalid &&
                         registerprofile.get('uname')?.touched
                       "
-                      >User Name is Required
+                      >User Name is required
                     </ng-container>
                   </div>
                 </div>
@@ -250,7 +250,7 @@
                         registerprofile.get('state')?.invalid &&
                         registerprofile.get('state')?.touched
                       "
-                      >State is Required
+                      >State is required
                     </ng-container>
                   </div>
                 </div>
@@ -278,7 +278,7 @@
                         registerprofile.get('city')?.invalid &&
                         registerprofile.get('city')?.touched
                       "
-                      >City is Required
+                      >City is required
                     </ng-container>
                   </div>
                 </div>
@@ -297,7 +297,7 @@
                         registerprofile.get('zipcode')?.invalid &&
                         registerprofile.get('zipcode')?.touched
                       "
-                      >ZipCode is Required
+                      >ZipCode is required
                     </ng-container>
                   </div>
                 </div>
@@ -320,7 +320,7 @@
                         registerprofile.get('timezone')?.invalid &&
                         registerprofile.get('timezone')?.touched
                       "
-                      >Time Zone is Required
+                      >Time Zone is required
                     </ng-container>
                   </div>
                 </div>
