--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
@@ -1030,7 +1030,7 @@
           />
           <div class="warn">
             <ng-container *ngIf="NoteTime == undefined"
-              >Note Time is Required
+              >Note Time is required
             </ng-container>
           </div>
         </div>
