--- a/web/src/app/components/admin-dashboard/components/patientAccount/patient-vitals/patient-vitals.component.html
+++ b/web/src/app/components/admin-dashboard/components/patientAccount/patient-vitals/patient-vitals.component.html
@@ -3067,7 +3067,7 @@
                 addMedicationForm.get('scheduleInterval')?.touched
               "
             >
-              Schedule is Required
+              Schedule is required
             </p>
           </div>
           <div class="add_clinic-item_sub" style="margin-right: 0px">
@@ -3091,7 +3091,7 @@
                 addMedicationForm.get('scheduleTime')?.touched
               "
             >
-              scheduleTime is Required
+              scheduleTime is required
             </p>
           </div>
         </div>
@@ -3232,7 +3232,7 @@
                 updateMedicationForm.get('scheduleInterval')?.touched
               "
             >
-              Schedule is Required
+              Schedule is required
             </p>
           </div>
           <div class="add_clinic-item_sub" style="margin-right: 0px">
@@ -3256,7 +3256,7 @@
                 updateMedicationForm.get('scheduleTime')?.touched
               "
             >
-              scheduleTime is Required
+              scheduleTime is required
             </p>
           </div>
         </div>
