--- a/web/src/app/components/admin-dashboard/shared/right-sidebar/right-sidebar.component.html
+++ b/web/src/app/components/admin-dashboard/shared/right-sidebar/right-sidebar.component.html
@@ -563,7 +563,7 @@
                 registerSchedule.get('userName')?.invalid &&
                 registerSchedule.get('userName')?.touched
               "
-              >Patient Name is Required
+              >Patient Name is required
             </ng-container>
           </div>
         </div>
@@ -590,7 +590,7 @@
                 registerSchedule.get('scheduleType')?.invalid &&
                 registerSchedule.get('scheduleType')?.touched
               "
-              >Schedule Type is Required
+              >Schedule Type is required
             </ng-container>
           </div>
         </div>
@@ -609,7 +609,7 @@
                 registerSchedule.get('scheduleDescription')?.invalid &&
                 registerSchedule.get('scheduleDescription')?.touched
               "
-              >Schedule Description is Required
+              >Schedule Description is required
             </ng-container>
           </div>
         </div>
@@ -657,7 +657,7 @@
                   registerSchedule.get('endDate')?.invalid &&
                   registerSchedule.get('endDate')?.touched
                 "
-                >End date is Required
+                >End date is required
               </ng-container>
             </div>
           </div>
@@ -679,7 +679,7 @@
                   registerSchedule.get('startTime')?.invalid &&
                   registerSchedule.get('startTime')?.touched
                 "
-                >Start Time is Required
+                >Start Time is required
               </ng-container>
             </div>
           </div>
@@ -734,7 +734,7 @@
                 registerSchedule.get('frequency')?.invalid &&
                 registerSchedule.get('frequency')?.touched
               "
-              >Frequency value is Required
+              >Frequency value is required
             </ng-container>
           </div>
 
@@ -1308,7 +1308,7 @@
                 registerSchedule.get('userName')?.invalid &&
                 registerSchedule.get('userName')?.touched
               "
-              >Patient Name is Required
+              >Patient Name is required
             </ng-container>
           </div>
         </div>
@@ -1336,7 +1336,7 @@
                 registerSchedule.get('scheduleType')?.invalid &&
                 registerSchedule.get('scheduleType')?.touched
               "
-              >Schedule Type is Required
+              >Schedule Type is required
             </ng-container>
           </div>
         </div>
@@ -1357,7 +1357,7 @@
                 registerSchedule.get('scheduleDescription')?.invalid &&
                 registerSchedule.get('scheduleDescription')?.touched
               "
-              >Schedule Description is Required
+              >Schedule Description is required
             </ng-container>
           </div>
         </div>
@@ -1444,7 +1444,7 @@
                   registerSchedule.get('endDate')?.invalid &&
                   registerSchedule.get('endDate')?.touched
                 "
-                >End date is Required
+                >End date is required
               </ng-container>
             </div>
           </div>
@@ -1492,7 +1492,7 @@
                   registerSchedule.get('startTime')?.invalid &&
                   registerSchedule.get('startTime')?.touched
                 "
-                >Start Time is Required
+                >Start Time is required
               </ng-container>
             </div>
           </div>
@@ -1548,7 +1548,7 @@
                 registerSchedule.get('frequency')?.invalid &&
                 registerSchedule.get('frequency')?.touched
               "
-              >Frequency value is Required
+              >Frequency value is required
             </ng-container>
           </div>
 
@@ -1871,7 +1871,7 @@
                   viewAlertform.get('Name')?.invalid &&
                   viewAlertform.get('Name')?.touched
                 "
-                >Patient Name is Required
+                >Patient Name is required
               </ng-container>
             </div>
           </div>
@@ -1890,7 +1890,7 @@
                   viewAlertform.get('alertType')?.invalid &&
                   viewAlertform.get('alertType')?.touched
                 "
-                >Alert Type is Required
+                >Alert Type is required
               </ng-container>
             </div>
           </div>
@@ -1911,7 +1911,7 @@
                   viewAlertform.get('alertdescription')?.invalid &&
                   viewAlertform.get('alertdescription')?.touched
                 "
-                >description is Required
+                >description is required
               </ng-container>
             </div>
           </div>
@@ -1936,7 +1936,7 @@
                     viewAlertform.get('dueDate')?.invalid &&
                     viewAlertform.get('dueDate')?.touched
                   "
-                  >Due Date is Required
+                  >Due Date is required
                 </ng-container>
               </div>
             </div>
@@ -1958,7 +1958,7 @@
                     viewAlertform.get('alertPriority')?.invalid &&
                     viewAlertform.get('alertPriority')?.touched
                   "
-                  >Priority is Required
+                  >Priority is required
                 </ng-container>
               </div>
             </div>
@@ -1983,7 +1983,7 @@
                   viewAlertform.get('alertstatus')?.invalid &&
                   viewAlertform.get('alertstatus')?.touched
                 "
-                >Status is Required
+                >Status is required
               </ng-container>
             </div>
           </div>
@@ -2168,7 +2168,7 @@
                   registerTask.get('userName')?.invalid &&
                   registerTask.get('userName')?.touched
                 "
-                >Patient Name is Required
+                >Patient Name is required
               </ng-container>
             </div>
           </div>
@@ -2193,7 +2193,7 @@
                   registerTask.get('tasktype')?.invalid &&
                   registerTask.get('tasktype')?.touched
                 "
-                >Task Type is Required
+                >Task Type is required
               </ng-container>
             </div>
           </div>
@@ -2231,7 +2231,7 @@
                     registerTask.get('duedate')?.invalid &&
                     registerTask.get('duedate')?.touched
                   "
-                  >Due date is Required
+                  >Due date is required
                 </ng-container>
               </div>
             </div>
@@ -2258,7 +2258,7 @@
                     registerTask.get('priority')?.invalid &&
                     registerTask.get('priority')?.touched
                   "
-                  >Priority is Required
+                  >Priority is required
                 </ng-container>
               </div>
             </div>
@@ -2296,7 +2296,7 @@
                   registerTask.get('task_status')?.invalid &&
                   registerTask.get('task_status')?.touched
                 "
-                >Status is Required
+                >Status is required
               </ng-container>
             </div>
           </div>
@@ -2475,7 +2475,7 @@
                 registerTeamForm.get('teamname')?.invalid &&
                 registerTeamForm.get('teamname')?.touched
               "
-              >TeamName is Required
+              >TeamName is required
             </ng-container>
           </div>
         </div>
@@ -2494,7 +2494,7 @@
                 registerTeamForm.get('teamname')?.invalid &&
                 registerTeamForm.get('teamname')?.touched
               "
-              >TeamName is Required
+              >TeamName is required
             </ng-container>
           </div>
         </div>
@@ -2522,7 +2522,7 @@
                 registerTeamForm.get('mangerName')?.invalid &&
                 registerTeamForm.get('mangerName')?.touched
               "
-              >manager Name is Required
+              >manager Name is required
             </ng-container>
           </div>
         </div>
@@ -2679,7 +2679,7 @@
                   registerDevice.get('device')?.invalid &&
                   registerDevice.get('device')?.touched
                 "
-                >Device is Required
+                >Device is required
               </ng-container>
             </div>
           </div>
@@ -2703,7 +2703,7 @@
                   registerDevice.get('deviceType')?.invalid &&
                   registerDevice.get('deviceType')?.touched
                 "
-                >Device Type is Required
+                >Device Type is required
               </ng-container>
             </div>
           </div>
@@ -2734,7 +2734,7 @@
                   registerDevice.get('deviceMake')?.invalid &&
                   registerDevice.get('deviceMake')?.touched
                 "
-                >Manufacture Name is Required
+                >Manufacture Name is required
               </ng-container>
             </div>
           </div>
@@ -2754,7 +2754,7 @@
                     registerDevice.get('IMEA')?.invalid &&
                     registerDevice.get('IMEA')?.touched
                   "
-                  >IMEA is Required
+                  >IMEA is required
                 </ng-container>
               </div>
             </div>
@@ -2772,7 +2772,7 @@
                     registerDevice.get('serialNumber')?.invalid &&
                     registerDevice.get('serialNumber')?.touched
                   "
-                  >serialNumber is Required
+                  >serialNumber is required
                 </ng-container>
               </div>
             </div>
@@ -2825,7 +2825,7 @@
                     registerDevice.get('vendorNameDevice')?.invalid &&
                     registerDevice.get('vendorNameDevice')?.touched
                   "
-                  >VendorName is Required
+                  >VendorName is required
                 </ng-container>
               </div>
             </div>
@@ -2850,7 +2850,7 @@
                 registerDevice.get('purchaseDate')?.invalid &&
                 registerDevice.get('purchaseDate')?.touched
               "
-              >purchaseDate is Required
+              >purchaseDate is required
             </ng-container>
           </div>
 
@@ -2913,7 +2913,7 @@
                   registerVendor.get('vendorName')?.invalid &&
                   registerVendor.get('vendorName')?.touched
                 "
-                >Vendor Name is Required
+                >Vendor Name is required
               </ng-container>
             </div>
           </div>
@@ -2944,7 +2944,7 @@
                   registerVendor.get('vendorCode')?.invalid &&
                   registerVendor.get('vendorCode')?.touched
                 "
-                >Vendor Code is Required
+                >Vendor Code is required
               </ng-container>
             </div>
           </div>
@@ -2965,7 +2965,7 @@
                     registerVendor.get('primaryMobVendor')?.invalid &&
                     registerVendor.get('primaryMobVendor')?.touched
                   "
-                  >Valid Mobile Number is Required
+                  >Valid Mobile Number is required
                 </ng-container>
               </div>
             </div>
@@ -2983,7 +2983,7 @@
                     registerVendor.get('alternateMobVendor')?.invalid &&
                     registerVendor.get('alternateMobVendor')?.touched
                   "
-                  >Valid Mobile Number is Required
+                  >Valid Mobile Number is required
                 </ng-container>
               </div>
             </div>
@@ -3005,7 +3005,7 @@
                       registerVendor.get('vendorAddress1')?.invalid &&
                       registerVendor.get('vendorAddress1')?.touched
                     "
-                    >Address is Required
+                    >Address is required
                   </ng-container>
                 </div>
               </div>
@@ -3022,7 +3022,7 @@
                       registerVendor.get('vendorAddress2')?.invalid &&
                       registerVendor.get('vendorAddress2')?.touched
                     "
-                    >Address is Required
+                    >Address is required
                   </ng-container>
                 </div>
               </div>
@@ -3043,7 +3043,7 @@
                     registerVendor.get('zipcode')?.invalid &&
                     registerVendor.get('zipcode')?.touched
                   "
-                  >Zipcode is Required
+                  >Zipcode is required
                 </ng-container>
               </div>
             </div>
@@ -3067,7 +3067,7 @@
                     registerVendor.get('state')?.invalid &&
                     registerVendor.get('state')?.touched
                   "
-                  >State is Required
+                  >State is required
                 </ng-container>
               </div>
             </div>
@@ -3090,7 +3090,7 @@
                   registerVendor.get('city')?.invalid &&
                   registerVendor.get('city')?.touched
                 "
-                >City is Required
+                >City is required
               </ng-container>
             </div>
           </div>
@@ -3207,7 +3207,7 @@
                   registerTeamTask.get('tasktype')?.invalid &&
                   registerTeamTask.get('tasktype')?.touched
                 "
-                >Task Type is Required
+                >Task Type is required
               </ng-container>
             </div>
           </div>
@@ -3244,7 +3244,7 @@
                     registerTeamTask.get('duedate')?.invalid &&
                     registerTeamTask.get('duedate')?.touched
                   "
-                  >Due date is Required
+                  >Due date is required
                 </ng-container>
               </div>
             </div>
@@ -3272,7 +3272,7 @@
                     registerTeamTask.get('priority')?.invalid &&
                     registerTeamTask.get('priority')?.touched
                   "
-                  >Priority is Required
+                  >Priority is required
                 </ng-container>
               </div>
             </div>
@@ -3311,7 +3311,7 @@
                   registerTeamTask.get('task_status')?.invalid &&
                   registerTeamTask.get('task_status')?.touched
                 "
-                >Status is Required
+                >Status is required
               </ng-container>
             </div>
           </div>
@@ -3432,7 +3432,7 @@
                   viewTeamAlertform.get('Name')?.invalid &&
                   viewTeamAlertform.get('Name')?.touched
                 "
-                >Patient Name is Required
+                >Patient Name is required
               </ng-container>
             </div>
           </div>
@@ -3451,7 +3451,7 @@
                   viewTeamAlertform.get('alertType')?.invalid &&
                   viewTeamAlertform.get('alertType')?.touched
                 "
-                >Alert Type is Required
+                >Alert Type is required
               </ng-container>
             </div>
           </div>
@@ -3472,7 +3472,7 @@
                   viewTeamAlertform.get('alertdescription')?.invalid &&
                   viewTeamAlertform.get('alertdescription')?.touched
                 "
-                >description is Required
+                >description is required
               </ng-container>
             </div>
           </div>
@@ -3497,7 +3497,7 @@
                     viewTeamAlertform.get('dueDate')?.invalid &&
                     viewTeamAlertform.get('dueDate')?.touched
                   "
-                  >Due Date is Required
+                  >Due Date is required
                 </ng-container>
               </div>
             </div>
@@ -3519,7 +3519,7 @@
                     viewTeamAlertform.get('alertPriority')?.invalid &&
                     viewTeamAlertform.get('alertPriority')?.touched
                   "
-                  >Priority is Required
+                  >Priority is required
                 </ng-container>
               </div>
             </div>
@@ -3544,7 +3544,7 @@
                   viewTeamAlertform.get('alertstatus')?.invalid &&
                   viewTeamAlertform.get('alertstatus')?.touched
                 "
-                >Status is Required
+                >Status is required
               </ng-container>
             </div>
           </div>
