--- a/web/src/app/components/admin-dashboard/shared/side-bar/models/profile-menu-button/profile-menu-button.component.html
+++ b/web/src/app/components/admin-dashboard/shared/side-bar/models/profile-menu-button/profile-menu-button.component.html
@@ -99,7 +99,7 @@
                 *ngIf="submitted && NewTextEntered.password.errors"
               >
                 <div *ngIf="NewTextEntered.password.errors.required">
-                  Password is Required
+                  Password is required
                 </div>
               </div>
             </div>
