--- a/web/src/app/components/login/login.component.html
+++ b/web/src/app/components/login/login.component.html
@@ -90,7 +90,7 @@
               loginForm.get('username')?.invalid &&
               loginForm.get('username')?.touched
             "
-            >User Name is Required
+            >User Name is required
           </ng-container>
         </div>
       </div>
@@ -131,7 +131,7 @@
               loginForm.get('password')?.touched &&
               IsPassword
             "
-            >Password is Required
+            >Password is required
           </ng-container>
         </div>
         <div class="warn">
@@ -319,7 +319,7 @@
               resetInitloginForm.get('username')?.invalid &&
               resetInitloginForm.get('username')?.touched
             "
-            >User Name is Required
+            >User Name is required
           </ng-container>
         </div>
       </div>
