--- a/web/src/app/components/admin-dashboard/components/addpatient/addpatient.component.html
+++ b/web/src/app/components/admin-dashboard/components/addpatient/addpatient.component.html
@@ -686,7 +686,7 @@
                     PatientInfoForm.get('clinicname')?.touched
                   "
                 >
-                  Clinic Name is Required
+                  Clinic Name is required
                 </ng-container>
               </div>
             </div>
@@ -735,7 +735,7 @@
                       PatientInfoForm.get('addressline1')?.touched
                     "
                   >
-                    Address is Required
+                    Address is required
                   </ng-container>
                 </div>
               </div>
@@ -782,7 +782,7 @@
                           PatientInfoForm.get('state')?.touched
                         "
                       >
-                        State is Required
+                        State is required
                       </ng-container>
                     </div>
                   </div>
@@ -809,7 +809,7 @@
                           PatientInfoForm.get('city')?.touched
                         "
                       >
-                        City is Required
+                        City is required
                       </ng-container>
                     </div>
                   </div>
@@ -834,7 +834,7 @@
                           PatientInfoForm.get('zipcode')?.touched
                         "
                       >
-                        ZipCode is Required
+                        ZipCode is required
                       </ng-container>
                     </div>
                   </div>
@@ -862,7 +862,7 @@
                           PatientInfoForm.get('timezone')?.touched
                         "
                       >
-                        Time Zone is Required
+                        Time Zone is required
                       </ng-container>
                     </div>
                   </div>
@@ -1224,7 +1224,7 @@
                         programForm.get('startdate')?.touched
                       "
                     >
-                      start date is required
+                      Start date is required
                     </ng-container>
                   </div>
                 </div>
@@ -1663,7 +1663,7 @@
                             programForm.get('code')?.invalid &&
                             programForm.get('code')?.touched
                           "
-                          >code is Required</small
+                          >code is required</small
                         >
                       </div>
                     </div>
