--- a/web/src/app/components/admin-dashboard/shared/header/header.component.scss
+++ b/web/src/app/components/admin-dashboard/shared/header/header.component.scss
@@ -141,21 +141,21 @@
 
 .badge {
   position: absolute;
-
-  top: -9px;
-  right: 14px;
+  top: -12px;
+  right:8px;
   font-size: 0.6rem;
   color: #d8dce5;
   border-radius: 50%;
-  min-width: 15px;
-  height: 15px;
+  min-width: 25px;
+  height: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-family: "Rubik";
   cursor: pointer;
   text-align: center;
-  background-color: #8226df;
+  background-color: #8226df; 
+  max-width: 20px; 
 }
 
 .notification_container {
