--- a/web/src/app/components/admin-dashboard/shared/side-panel-patient/side-panel-patient.component.html
+++ b/web/src/app/components/admin-dashboard/shared/side-panel-patient/side-panel-patient.component.html
@@ -612,7 +612,7 @@
                   registerTask.get('tasktype')?.invalid &&
                   registerTask.get('tasktype')?.touched
                 "
-                >Tasktype is Required
+                >Tasktype is required
               </ng-container>
             </div>
           </div>
@@ -631,7 +631,7 @@
                   registerTask.get('description')?.invalid &&
                   registerTask.get('description')?.touched
                 "
-                >Description is Required
+                >Description is required
               </ng-container>
             </div>
           </div>
@@ -673,7 +673,7 @@
                     registerTask.get('priority')?.invalid &&
                     registerTask.get('priority')?.touched
                   "
-                  >Priority is Required
+                  >Priority is required
                 </ng-container>
               </div>
             </div>
@@ -709,7 +709,7 @@
                   registerTask.get('task_status')?.invalid &&
                   registerTask.get('task_status')?.touched
                 "
-                >Task status is Required
+                >Task status is required
               </ng-container>
             </div>
           </div>
@@ -920,7 +920,7 @@
                   registerSchedule.get('scheduleType')?.invalid &&
                   registerSchedule.get('scheduleType')?.touched
                 "
-                >Schedule Type is Required
+                >Schedule Type is required
               </ng-container>
             </div>
           </div>
@@ -939,7 +939,7 @@
                   registerSchedule.get('scheduleDescription')?.invalid &&
                   registerSchedule.get('scheduleDescription')?.touched
                 "
-                >Schedule Description is Required
+                >Schedule Description is required
               </ng-container>
             </div>
           </div>
@@ -983,7 +983,7 @@
                     registerSchedule.get('endDate')?.invalid &&
                     registerSchedule.get('endDate')?.touched
                   "
-                  >End date is Required
+                  >End date is required
                 </ng-container>
               </div>
             </div>
@@ -1008,7 +1008,7 @@
                     registerSchedule.get('startTime')?.touched
                   "
                 >
-                  Start time is Required
+                  Start time is required
                 </ng-container>
               </div>
             </div>
@@ -1071,7 +1071,7 @@
                   registerSchedule.get('frequency')?.touched
                 "
               >
-                Frequency is Required
+                Frequency is required
               </ng-container>
             </div>
 
@@ -1403,7 +1403,7 @@
                   registerSchedule.get('scheduleType')?.invalid &&
                   registerSchedule.get('scheduleType')?.touched
                 "
-                >Schedule Type is Required
+                >Schedule Type is required
               </ng-container>
             </div>
           </div>
@@ -1423,7 +1423,7 @@
                   registerSchedule.get('scheduleDescription')?.invalid &&
                   registerSchedule.get('scheduleDescription')?.touched
                 "
-                >Schedule Description is Required
+                >Schedule Description is required
               </ng-container>
             </div>
           </div>
@@ -1503,7 +1503,7 @@
                     registerSchedule.get('endDate')?.invalid &&
                     registerSchedule.get('endDate')?.touched
                   "
-                  >End date is Required
+                  >End date is required
                 </ng-container>
               </div>
             </div>
@@ -1553,7 +1553,7 @@
                     registerSchedule.get('startTime')?.touched
                   "
                 >
-                  Start time is Required
+                  Start time is required
                 </ng-container>
               </div>
             </div>
@@ -1614,7 +1614,7 @@
                   registerSchedule.get('frequency')?.touched
                 "
               >
-                Frequency is Required
+                Frequency is required
               </ng-container>
             </div>
 
@@ -2022,7 +2022,7 @@
                   registerSymptoms.get('symptomsType')?.invalid &&
                   registerSymptoms.get('symptomsType')?.touched
                 "
-                >Symptom Type is Required
+                >Symptom Type is required
               </ng-container>
             </div>
           </div>
@@ -2042,7 +2042,7 @@
                 registerSymptoms.get('symptomsDescription')?.invalid &&
                 registerSymptoms.get('symptomsDescription')?.touched
               "
-              >Symptom Description is Required
+              >Symptom Description is required
             </ng-container>
           </div>
         </div>
@@ -2110,7 +2110,7 @@
                 addMedicationForm.get('medicineName')?.invalid &&
                 addMedicationForm.get('medicineName')?.touched
               "
-              >Medicine is Required
+              >Medicine is required
             </ng-container>
           </div>
         </div>
@@ -2140,7 +2140,7 @@
                     addMedicationForm.get('scheduleInterval')?.invalid &&
                     addMedicationForm.get('scheduleInterval')?.touched
                   "
-                  >Schedule is Required
+                  >Schedule is required
                 </ng-container>
               </div>
             </div>
@@ -2165,7 +2165,7 @@
                     addMedicationForm.get('scheduleTime')?.invalid &&
                     addMedicationForm.get('scheduleTime')?.touched
                   "
-                  >Interval is Required
+                  >Interval is required
                 </ng-container>
               </div>
             </div>
@@ -2277,7 +2277,7 @@
               addMedicationForm.get('medicationcomment')?.invalid &&
               addMedicationForm.get('medicationcomment')?.touched
             "
-            >Comment is Required
+            >Comment is required
           </ng-container>
         </div>
       </div>
@@ -2411,7 +2411,7 @@
                   viewAlertform.get('alertType')?.invalid &&
                   viewAlertform.get('alertType')?.touched
                 "
-                >Alert Type is Required
+                >Alert Type is required
               </ng-container>
             </div>
           </div>
@@ -2432,7 +2432,7 @@
                   viewAlertform.get('alertdescription')?.invalid &&
                   viewAlertform.get('alertdescription')?.touched
                 "
-                >Description is Required
+                >Description is required
               </ng-container>
             </div>
           </div>
@@ -2457,7 +2457,7 @@
                     viewAlertform.get('dueDate')?.invalid &&
                     viewAlertform.get('dueDate')?.touched
                   "
-                  >Due Date is Required
+                  >Due Date is required
                 </ng-container>
               </div>
             </div>
@@ -2479,7 +2479,7 @@
                     viewAlertform.get('alertPriority')?.invalid &&
                     viewAlertform.get('alertPriority')?.touched
                   "
-                  >Priority is Required
+                  >Priority is required
                 </ng-container>
               </div>
             </div>
@@ -2527,7 +2527,7 @@
                   viewAlertform.get('alertstatus')?.invalid &&
                   viewAlertform.get('alertstatus')?.touched
                 "
-                >Status is Required
+                >Status is required
               </ng-container>
             </div>
           </div>
