--- a/web/src/app/components/admin-dashboard/components/addpatient/addpatient.component.scss
+++ b/web/src/app/components/admin-dashboard/components/addpatient/addpatient.component.scss
@@ -23,7 +23,9 @@
   position: relative;
   //background-color: red;
 }
-
+.patient-name{
+  margin-left: 0.4rem;
+}
 .patientpage {
   width: 100%;
   height: 60vh;
